# wss

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
config/: default.toml
lib/spdlog/: README.md
lib/spdlog/cmake/: utils.cmake
lib/spdlog/include/spdlog/: stopwatch.h  tweakme.h
lib/spdlog/include/spdlog/details/: udp_client.h
lib/spdlog/include/spdlog/fmt/: chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
lib/spdlog/include/spdlog/fmt/bundled/: base.h  color.h  format.h
lib/spdlog/include/spdlog/sinks/: dup_filter_sink.h
lib/spdlog/scripts/: extract_version.py
src/: config.h  dimparser.h  ipc.cpp  ipc.h  main.cpp  pch.h  shell.cpp  shell.h  widget.cpp  widget.h
src/dispatch/: dispatcher.cpp  dispatcher.h  zmq_rep.h  zmq_req.h
src/modules/: appd.cpp  appd.h  notifd.cpp  notifd.h
src/util/: dbus_vreader.h  dimparser.h
wss-js/: .gitignore  package.json  tsconfig.json
wss-js/src/: index.ts
